# DMA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSGX.cmake
include/global/: general_settings.h
lib/: CMakeLists.txt
lib/attestation/: CMakeLists.txt  attestation.edl
lib/attestation/trusted/ias_verify/: ias_verify.cpp
lib/attestation/trusted/rpc/: basic_serializer.cpp
lib/attestation/trusted/sgx/: ecall_report.cpp
lib/attestation/trusted/util/: attestation_helper.cpp
lib/attestation/untrusted/ias_client/: ias_client.cpp  ocall.cpp
lib/attestation/untrusted/ias_verify/: ias_verify.cpp  ocall.cpp
lib/attestation/untrusted/sgx/: ocall_quote_dcap.cpp  ocall_quote_ex.cpp  ocall_quote_legacy.cpp
lib/consensus/: CMakeLists.txt
lib/consensus/trusted/1/: consensus.cpp
lib/epid/: CMakeLists.txt
lib/epid/trusted/: sig_rl.cpp
lib/scheduler/: CMakeLists.txt  scheduler.edl
lib/scheduler/trusted/: async_task.cpp  scheduler.cpp  task_scheduler.cpp
lib/scheduler/untrusted/: scheduler.cpp
lib/sgx_socket/: CMakeLists.txt  sgx_socket.edl
lib/sgx_socket/trusted/: htonl.c  htons.c  sgx_socket.cpp  socket.cpp
lib/sgx_socket/untrusted/: sgx_socket.cpp
lib/ssl_socket/: CMakeLists.txt  ssl_socket.edl
lib/util/: CMakeLists.txt  util.edl
lib/util/global/: ip.cpp
lib/util/trusted/: ecall.cpp
lib/util/untrusted/: log.cpp  time.cpp
src/: CMakeLists.txt
src/attest/: CMakeLists.txt  Enclave.config.xml  Enclave.edl
src/auth/: CMakeLists.txt  Enclave.config.xml  Enclave.edl
src/user/: CMakeLists.txt  Enclave.config.xml  Enclave.edl
(+202 files in other folders)
